ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/Secondary_Sloped_Insulation__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sloped_Insulation__c</fullName>
    <label>Secondary / Sloped Insulation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>EPS</fullName>
            </value>
            <value>
                <fullName>Fibreboard</fullName>
            </value>
            <value>
                <fullName>IKOTherm</fullName>
            </value>
            <value>
                <fullName>IKOTherm - 25psi</fullName>
            </value>
            <value>
                <fullName>IKOTherm III</fullName>
            </value>
            <value>
                <fullName>IKOTherm III - 25psi</fullName>
            </value>
            <value>
                <fullName>IKOTherm III Tapered</fullName>
            </value>
            <value>
                <fullName>IKOTherm Tapered</fullName>
            </value>
            <value>
                <fullName>Mineral Wool</fullName>
            </value>
            <value>
                <fullName>XPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>