ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/Slope_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Slope_Percentage__c</fullName>
    <label>Slope Percentage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1%</fullName>
            </value>
            <value>
                <fullName>1.5%</fullName>
            </value>
            <value>
                <fullName>2%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>