ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/TYPE_OF_SYSTEM__c.field-meta.xml
<CustomField>
    <fullName>TYPE_OF_SYSTEM__c</fullName>
    <label>Type Of System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SINGLE PLY</fullName>
            </value>
            <value>
                <fullName>TWO-PLY</fullName>
            </value>
            <value>
                <fullName>BUR</fullName>
            </value>
            <value>
                <fullName>INVERTED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>