ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/Vapour_Retarder__c.field-meta.xml
<CustomField>
    <fullName>Vapour_Retarder__c</fullName>
    <label>Vapour Retarder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Armourbond Flash Sand</fullName>
            </value>
            <value>
                <fullName>Armourbond Flash Sand HD</fullName>
            </value>
            <value>
                <fullName>Armourgard Ice &amp; Water</fullName>
            </value>
            <value>
                <fullName>Kraft Paper</fullName>
            </value>
            <value>
                <fullName>Modiflex MF-95-SS Base</fullName>
            </value>
            <value>
                <fullName>Modiflex MP-180-SS Base</fullName>
            </value>
            <value>
                <fullName>MVP</fullName>
            </value>
            <value>
                <fullName>MVP Sand</fullName>
            </value>
            <value>
                <fullName>No. 15 Felt Perforated</fullName>
            </value>
            <value>
                <fullName>Torchflex TF-95-FF</fullName>
            </value>
            <value>
                <fullName>Torchflex TF-95-SF</fullName>
            </value>
            <value>
                <fullName>Torchflex TP-180-SF Base</fullName>
            </value>
            <value>
                <fullName>Torchflex TP-180-SF 3.5</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Acrylicstic SA</fullName>
                <isActive>false</isActive>
                <label>Acrylicstic SA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>