ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/Vapour_Retarder_Application__c.field-meta.xml
<CustomField>
    <fullName>Vapour_Retarder_Application__c</fullName>
    <label>Vapour Retarder Application</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vapour_Retarder__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAM Adhesive</fullName>
            </value>
            <value>
                <fullName>SAM Adhesive LVC</fullName>
            </value>
            <value>
                <fullName>Type II Asphalt</fullName>
            </value>
            <value>
                <fullName>Type III Asphalt</fullName>
            </value>
            <value>
                <fullName>SEBS Asphalt</fullName>
                <label>Modi-Melt SEBS Asphalt</label>
            </value>
            <value>
                <fullName>Kraft Paper Cold Adhesive</fullName>
            </value>
            <value>
                <fullName>Torch Applied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>