ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/Warranty_Term__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Term__c</fullName>
    <label>Warranty Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5 Year</fullName>
            </value>
            <value>
                <fullName>10 Year</fullName>
            </value>
            <value>
                <fullName>12 Year</fullName>
            </value>
            <value>
                <fullName>15 Year</fullName>
            </value>
            <value>
                <fullName>20 Year</fullName>
            </value>
            <value>
                <fullName>25 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>