ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/fields/Warranty_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Type_2__c</fullName>
    <label>Warranty Type II</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Warranty_Term_2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DiamondShield</fullName>
            </value>
            <value>
                <fullName>Labour &amp; Materials (L&amp;M)</fullName>
            </value>
            <value>
                <fullName>Re-Cover</fullName>
            </value>
            <value>
                <fullName>Provincial</fullName>
            </value>
            <value>
                <fullName>Other Manfacturer</fullName>
            </value>
            <value>
                <fullName>Material Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>