ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/recordTypes/Completed_Roofing_System_Warranty.recordType-meta.xml
<RecordType>
    <fullName>Completed_Roofing_System_Warranty</fullName>
    <active>true</active>
    <label>Completed Roofing System &amp; Warranty</label>
</RecordType>