ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/recordTypes/Draft_Roofing_System_Warranty.recordType-meta.xml
<RecordType>
    <fullName>Draft_Roofing_System_Warranty</fullName>
    <active>true</active>
    <label>Draft Roofing System &amp; Warranty</label>
</RecordType>