ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Roofing_System_Warranty__c/validationRules/Completed_record_should_not_be_modified.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_record_should_not_be_modified</fullName>
    <active>true</active>
    <description>Prevents changing Name and Opportunity on the record (required fields that cannot be made read only on page layout level)</description>
    <errorConditionFormula>AND(
 Complete__c , 
OR(
ISCHANGED( Opportunity__c ), ISCHANGED( Name )
)
)</errorConditionFormula>
    <errorMessage>You are not allowed to change a completed Roofing System &amp; Warranty record.</errorMessage>
</ValidationRule>